[metadata]
name=vss
description=utility for parsing GENIVI's vehicle signal specification
version=1.0.0
url=https://github.com/XevoInc/vss
long_description=file: README.md,
long_description_content_type=text/markdown
author=Ryan Rowe
author_email=rrowe@xevo.com
license=Apache License, Version 2.0
license_file=LICENSE.md
python_requires=>=3.7
classifiers=
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
  Typing :: Typed

[options]
setup_requires =
  # Minimal version with most `setup.cfg` bug fixes.
  setuptools >= 38.3.0
packages = find:
test_suite = tests
install_requires =
  pint
  typeguard >= 2.9.1
  typing_extensions; python_version < '3.8'
include_package_data = True

[options.extras_require]
dev =
  flake8
  twine

[flake8]
max-line-length = 120
